Fix Mobile NarBar Gap

--- a/aeria/css/style.css
+++ b/aeria/css/style.css
@@ -265,11 +265,10 @@ div:focus.focus-visible{
     outline-offset: 0 !important;
 }
 
-embed, object, video{
+:not([draggable]), embed, object, video{
     max-width: 100%;
     height: auto;
 }
-
 
 
 /* ==============================
@@ -1562,7 +1561,6 @@ a.logo:hover{
  */
 
 .main-nav{
-    padding: 0 2%;
     width: 100%;
     height: 75px !important;
     position: relative;
